--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.21.1",
     "express-flash": "^0.0.2",
     "express-session": "^1.18.1",
+    "method-override": "^3.0.0",
     "mongodb": "^6.11.0",
     "mongoose": "^8.9.2",
     "morgan": "^1.10.0",
