--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
+    "migrate:likes": "node config/migrateLikesField.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Heidi Fryzell",
